Small fixes across components
• Remove external links icon when images are the main link target
• Add space between heading and content inside cards
• Remove interior flex item for buttons
• Add extra space before an accordion

--- a/ecms_base/themes/custom/ecms/assets/patterns/00-atoms/02-text/_01-links.scss
+++ b/ecms_base/themes/custom/ecms/assets/patterns/00-atoms/02-text/_01-links.scss
@@ -85,13 +85,20 @@ a {
       display: none;
     }
   }
+  // Removing the icons in specific scenarios
+  .qh__media-item &[target='_blank']:has(img) {
+    &::before,
+    &::after {
+      display: none;
+    }
+  }
 }
 
 p,
 li,
 dt,
 dd {
-  a {
+  html:where(.wf-active:not(.novf)) & a {
     font-weight: calc(var(--p-font-wght) * 1.25);
   }
 }
